Add upload interface

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyB9mvo5vBOex7ctaSJkKMpd2GYbyluZ4T8",
+    authDomain: "fileuploaderryanokamuro.firebaseapp.com",
+    databaseURL: "https://fileuploaderryanokamuro.firebaseio.com",
+    projectId: "fileuploaderryanokamuro",
+    storageBucket: "fileuploaderryanokamuro.appspot.com",
+    messagingSenderId: "60911620468"
+  };
+  firebase.initializeApp(config);
+</script>
     <title>React App</title>
   </head>
   <body>
